--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "amazon-product-api": "^0.3.1",
+    "async": "0.9.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.9.0",
+    "bower": "^1.4.1",
     "crypto": "0.0.3",
     "dotenv": "^1.2.0",
     "express": "^4.13.2",
-    "bower": "^1.4.1",
-    "request": "^2.60.0",
-    "async": "0.9.0",
-    "cassandra-driver": "1.0.0"
+    "request": "^2.60.0"
   }
 }
