--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,9 @@
 .env
 
 # Files that might appear on external disk
-.Spotlight-V100
-.Trashes
 node_modules/
 bower_components/
-db/
+data/db/
 client/lib
 
 # Thumbnails
