--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "amazon-product-api": "^0.3.1",
     "async": "0.9.0",
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.9.0",
+    "body-parser": "^1.13.3",
     "bower": "^1.4.1",
     "crypto": "0.0.3",
     "dotenv": "^1.2.0",
-    "express": "^4.13.2",
+    "express": "^4.13.3",
+    "mongoose": "^4.1.3",
+    "morgan": "^1.6.1",
     "request": "^2.60.0"
   }
 }
