--- a/package.json
+++ b/package.json
@@ -21,5 +21,14 @@
     "mongoose": "^4.1.3",
     "morgan": "^1.6.1",
     "request": "^2.60.0"
+  },
+  "devDependencies": {
+    "chai": "^3.2.0",
+    "mocha": "^2.2.5",
+    "supertest": "^1.1.0"
+  },
+  "scripts": {
+    "test": "npm run test-node",
+    "test-node": "mocha -R spec ./test/spec/ServerSpec.js"
   }
 }
