--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "chai": "^3.2.0",
     "mocha": "^2.2.5",
+    "should": "^7.1.0",
     "supertest": "^1.1.0"
   },
   "scripts": {
