--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.13.3",
     "bower": "^1.4.1",
+    "cors": "^2.7.1",
     "crypto": "0.0.3",
     "dotenv": "^1.2.0",
     "express": "^4.13.3",
+    "express-jwt": "^3.0.1",
     "mongoose": "^4.1.3",
     "morgan": "^1.6.1",
     "request": "^2.60.0"
