--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "async": "0.9.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.13.3",
+    "aws-lib": "latest",
     "bower": "^1.4.1",
     "cors": "^2.7.1",
     "crypto": "0.0.3",
@@ -22,6 +23,7 @@
     "express-jwt": "^3.0.1",
     "mongoose": "^4.1.3",
     "morgan": "^1.6.1",
+    "fs": "latest",
     "request": "^2.60.0"
   },
   "devDependencies": {
