--- a/package.json
+++ b/package.json
@@ -25,12 +25,20 @@
     "request": "^2.60.0"
   },
   "devDependencies": {
+    "babel-core": "^5.8.23",
+    "babel-loader": "^5.3.2",
     "chai": "^3.2.0",
     "mocha": "^2.2.5",
+    "react": "^0.13.3",
+    "react-hot-loader": "^1.3.0",
+    "react-router": "^0.13.3",
     "should": "^7.1.0",
-    "supertest": "^1.1.0"
+    "supertest": "^1.1.0",
+    "webpack": "^1.12.0",
+    "webpack-dev-server": "^1.10.1"
   },
   "scripts": {
+    "start": "node server.js",
     "test": "npm run test-node",
     "test-node": "mocha -R spec ./test/spec/userModelSpec.js"
   }
