add webpack and hot load config

--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
     "webpack-dev-server": "^1.10.1"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "webpack-dev-server --hot --progress --colors",
     "test": "npm run test-node",
-    "test-node": "mocha -R spec ./test/spec/userModelSpec.js"
+    "test-node": "mocha -R spec ./test/spec/userModelSpec.js",
+    "build": "webpack --progress --colors"
   }
 }
