successful getting friends name

--- a/package.json
+++ b/package.json
@@ -12,18 +12,20 @@
   "dependencies": {
     "amazon-product-api": "^0.3.1",
     "async": "0.9.0",
-    "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.13.3",
     "aws-lib": "latest",
+    "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^2.9.34",
+    "body-parser": "^1.13.3",
     "bower": "^1.4.1",
-    "cors": "^2.7.1",
+    "cors": "^2.3.1",
     "crypto": "0.0.3",
-    "dotenv": "^1.2.0",
+    "dotenv": "^0.2.8",
     "express": "^4.13.3",
-    "express-jwt": "^3.0.1",
+    "express-jwt": "3.0.1",
+    "fb": "^0.7.0",
+    "fs": "latest",
     "mongoose": "^4.1.3",
     "morgan": "^1.6.1",
-    "fs": "latest",
     "request": "^2.60.0"
   },
   "devDependencies": {
