--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "bluebird": "^2.9.34",
     "body-parser": "^1.13.3",
     "bower": "^1.4.1",
+    "cookie-parser": "^1.3.5",
+    "cookie-session": "^1.2.0",
     "cors": "^2.3.1",
     "crypto": "0.0.3",
     "dotenv": "^0.2.8",
