--- a/.gitignore
+++ b/.gitignore
@@ -31,4 +31,10 @@ coverage
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
+# Build folder
+build/
+
+# Credentials
+config/auth0-variables.js
+
 .DS_Store
