--- a/package.json
+++ b/package.json
@@ -32,16 +32,14 @@
   },
   "devDependencies": {
     "babel-core": "^5.8.23",
+    "babel-loader": "^5.3.2",
     "chai": "^3.2.0",
     "mocha": "^2.2.5",
     "react": "^0.13.3",
+    "react-hot-loader": "^1.3.0",
     "react-router": "^0.13.3",
     "should": "^7.1.0",
     "supertest": "^1.1.0",
-    "babel-loader": "latest",
-    "jsx-loader": "^0.13.1",
-    "webpack": "^1.8.9",
-    "react-hot-loader": "latest"
     "webpack": "^1.12.0",
     "webpack-dev-server": "^1.10.1"
   },
