--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "flux": "^2.0.1",
     "react": "^0.13.2",
     "react-slick": "^0.5.0",
-    "react-bootstrap": "latest"
+    "react-bootstrap": "latest",
     "request": "^2.60.0"
   },
   "devDependencies": {
