--- a/package.json
+++ b/package.json
@@ -32,19 +32,20 @@
     "flux": "^2.0.1",
     "react": "^0.13.2",
     "react-slick": "^0.5.0",
-    "react-bootstrap": "latest",
-    "request": "^2.60.0"
+    "react-bootstrap": "latest"
   },
   "devDependencies": {
     "babel-core": "^5.8.23",
     "babel-loader": "^5.3.2",
     "chai": "^3.2.0",
+    "css-loader": "^0.16.0",
     "jsx-loader": "^0.13.2",
     "mocha": "^2.2.5",
     "react": "^0.13.3",
     "react-hot-loader": "^1.3.0",
     "react-router": "^0.13.3",
     "should": "^7.1.0",
+    "style-loader": "^0.12.3",
     "supertest": "^1.1.0",
     "webpack": "^1.12.0",
     "webpack-dev-server": "^1.10.1"
