--- a/package.json
+++ b/package.json
@@ -35,10 +35,9 @@
     "react-bootstrap": "latest"
   },
   "devDependencies": {
-    "babel-core": "^5.8.23",
-    "babel-loader": "^5.3.2",
     "chai": "^3.2.0",
     "css-loader": "^0.16.0",
+    "html-webpack-plugin": "^1.6.1",
     "jsx-loader": "^0.13.2",
     "mocha": "^2.2.5",
     "react": "^0.13.3",
@@ -48,14 +47,13 @@
     "style-loader": "^0.12.3",
     "supertest": "^1.1.0",
     "webpack": "^1.12.0",
-    "webpack-dev-server": "^1.10.1"
+    "webpack-dev-server": "^1.10.1",
+    "webpack-merge": "^0.2.0"
   },
   "scripts": {
     "test": "npm run test-node",
     "test-node": "mocha -R spec ./test/spec/userModelSpec.js",
-    "build": "webpack --progress --profile --colors",
-    "watch": "webpack-dev-server --hot --inline --progress --colors",
-    "start": "webpack --progress --colors --watch -d",
-    "dev": "webpack-dev-server --devtool eval --hot --progress --colors --content-base build"
+    "start": "webpack-dev-server",
+    "watch": "webpack-dev-server --hot --inline --progress --colors"
   }
 }
