--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "Eric Le <therealericle@gmail.com>",
     "Chris Saden <csaden@gmail.com>"
   ],
+  "private": true,
   "license": "MIT",
   "dependencies": {
     "amazon-product-api": "^0.3.1",
@@ -35,12 +36,11 @@
     "react-bootstrap": "latest"
   },
   "devDependencies": {
+    "babel-loader": "^5.3.2",
     "chai": "^3.2.0",
     "css-loader": "^0.16.0",
     "html-webpack-plugin": "^1.6.1",
-    "jsx-loader": "^0.13.2",
     "mocha": "^2.2.5",
-    "react": "^0.13.3",
     "react-hot-loader": "^1.3.0",
     "react-router": "^0.13.3",
     "should": "^7.1.0",
@@ -54,6 +54,7 @@
     "test": "npm run test-node",
     "test-node": "mocha -R spec ./test/spec/userModelSpec.js",
     "start": "webpack-dev-server",
+    "build": "webpack --progress --colors",
     "watch": "webpack-dev-server --hot --inline --progress --colors"
   }
 }
