config nodemon to start backend server on npm start

--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
   "scripts": {
     "test": "npm run test-node",
     "test-node": "mocha -R spec ./test/spec/userModelSpec.js",
-    "start": "webpack-dev-server",
+    "server": "nodemon server/server.js",
+    "start": "webpack-dev-server & npm run server",
     "build": "webpack --progress --colors",
     "watch": "webpack-dev-server --hot --inline --progress --colors"
   }
