--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "start": "webpack-dev-server & npm run server",
     "mongod": "mongod",
     "server": "nodemon server/server.js",
+    "deploy": "NODE_ENV=production webpack -p",
     "build": "webpack --progress --colors",
     "watch": "webpack-dev-server --hot --inline --progress --colors"
   }
