--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "amazon-product-api": "^0.3.1",
     "async": "0.9.0",
     "aws-lib": "latest",
+    "babel-core": "^5.8.23",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^2.9.34",
     "body-parser": "^1.13.3",
@@ -29,13 +30,15 @@
     "fs": "latest",
     "mongoose": "^4.1.3",
     "morgan": "^1.6.1",
-    "request": "^2.60.0",
-    "flux": "^2.0.1",
     "react": "^0.13.2",
+    "react-bootstrap": "latest",
+    "react-redux": "^1.0.1",
     "react-slick": "^0.5.0",
-    "react-bootstrap": "latest"
+    "redux": "^1.0.1",
+    "request": "^2.60.0"
   },
   "devDependencies": {
+    "babel-core": "^5.6.18",
     "babel-loader": "^5.3.2",
     "chai": "^3.2.0",
     "css-loader": "^0.16.0",
