--- a/package.json
+++ b/package.json
@@ -33,19 +33,18 @@
     "react": "^0.13.2",
     "react-bootstrap": "latest",
     "react-redux": "^1.0.1",
+    "react-router": "1.0.0-beta3",
     "react-slick": "^0.5.0",
     "redux": "^1.0.1",
     "request": "^2.60.0"
   },
   "devDependencies": {
-    "babel-core": "^5.6.18",
     "babel-loader": "^5.3.2",
     "chai": "^3.2.0",
     "css-loader": "^0.16.0",
     "html-webpack-plugin": "^1.6.1",
     "mocha": "^2.2.5",
     "react-hot-loader": "^1.3.0",
-    "react-router": "^0.13.3",
     "should": "^7.1.0",
     "style-loader": "^0.12.3",
     "supertest": "^1.1.0",
