--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-router": "1.0.0-beta3",
     "react-slick": "^0.5.0",
     "redux": "^1.0.1",
+    "redux-thunk": "^0.1.0",
     "request": "^2.60.0"
   },
   "devDependencies": {
@@ -45,6 +46,7 @@
     "html-webpack-plugin": "^1.6.1",
     "mocha": "^2.2.5",
     "react-hot-loader": "^1.3.0",
+    "redux-logger": "^1.0.6",
     "should": "^7.1.0",
     "style-loader": "^0.12.3",
     "supertest": "^1.1.0",
