--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "auth0-lock": "^7.9.0",
     "aws-lib": "latest",
     "babel-core": "^5.8.23",
+    "bandsintown": "^1.0.0",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^2.9.34",
     "body-parser": "^1.13.3",
@@ -38,7 +39,8 @@
     "react-slick": "^0.5.0",
     "redux": "^1.0.1",
     "redux-thunk": "^0.1.0",
-    "request": "^2.60.0"
+    "request": "^2.60.0",
+    "string": "^3.3.1"
   },
   "devDependencies": {
     "babel-eslint": "^4.1.1",
