--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "amazon-product-api": "^0.3.1",
-    "async": "0.9.0",
+    "async": "^0.9.0",
     "auth0-lock": "^7.9.0",
     "aws-lib": "latest",
     "babel-core": "^5.8.23",
