--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.3.1",
     "crypto": "0.0.3",
     "dotenv": "^0.2.8",
+    "etsy-js": "0.0.5",
     "express": "^4.13.3",
     "express-jwt": "3.0.1",
     "fb": "^0.7.0",
