--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-jwt": "3.0.1",
     "fb": "^0.7.0",
     "fs": "latest",
+    "https": "^1.0.0",
     "mongoose": "^4.1.3",
     "morgan": "^1.6.1",
     "q": "^1.4.1",
@@ -41,7 +42,8 @@
     "redux": "^1.0.1",
     "redux-thunk": "^0.1.0",
     "request": "^2.60.0",
-    "string": "^3.3.1"
+    "string": "^3.3.1",
+    "urls": "0.0.4"
   },
   "devDependencies": {
     "babel-eslint": "^4.1.1",
