--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "chai": "^3.2.0",
     "css-loader": "^0.16.0",
     "eslint": "^1.3.1",
+    "eslint-loader": "^1.0.0",
     "html-webpack-plugin": "^1.6.1",
     "mocha": "^2.2.5",
     "react-hot-loader": "^1.3.0",
