--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gifty",
+  "name": "gyftee",
   "version": "1.0.0",
   "homepage": "https://github.com/agate-rain/gifty",
   "authors": [
