--- a/package.json
+++ b/package.json
@@ -46,14 +46,25 @@
     "urls": "0.0.4"
   },
   "devDependencies": {
+    "async": "^1.4.2",
     "babel-eslint": "^4.1.1",
     "babel-loader": "^5.3.2",
     "chai": "^3.2.0",
+    "core-js": "^1.1.4",
     "css-loader": "^0.16.0",
     "eslint": "^1.3.1",
     "eslint-loader": "^1.0.0",
+    "expect": "^1.10.0",
     "html-webpack-plugin": "^1.6.1",
-    "mocha": "^2.2.5",
+    "karma": "^0.13.9",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-cli": "^0.1.0",
+    "karma-mocha": "^0.2.0",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-sourcemap-loader": "^0.3.5",
+    "karma-webpack": "^1.7.0",
+    "mocha": "^2.3.2",
+    "phantomjs": "^1.9.18",
     "react-hot-loader": "^1.3.0",
     "redux-logger": "^1.0.6",
     "should": "^7.1.0",
@@ -66,7 +77,7 @@
   "scripts": {
     "lint": "eslint src",
     "test": "npm run test-node",
-    "test-node": "mocha -R spec ./test/spec/userModelSpec.js",
+    "test-node": "mocha -R spec ./test/spec/**/*Spec.js",
     "start": "webpack-dev-server & npm run server",
     "server": "nodemon server/server.js",
     "deploy": "NODE_ENV=production webpack -p",
