--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fb": "^0.7.0",
     "fs": "latest",
     "https": "^1.0.0",
+    "ituner": "^0.1.3",
     "mongoose": "^4.1.3",
     "morgan": "^1.6.1",
     "q": "^1.4.1",
